# neuralforge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NEURAL_CORE_VAULT_FINAL.md  NEURAL_CORE_VAULT_GITHUB_READY.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  quick_start.sh  requirements-dev.txt  requirements.txt  requirements_essential.txt
.cursor/notepads/: architecture-overview.md  code-templates.md  development-guidelines.md
.cursor/rules/agent/: automation-workflows.mdc  gui-development.mdc
.cursor/rules/always/: project-standards.mdc
.cursor/rules/auto/: ai-memory-rules.mdc  neural-engine-rules.mdc  testing-rules.mdc
.cursor/rules/manual/: debugging-workflow.mdc  deployment-procedures.mdc
.github/: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.md
docs/api/: README.md  memory_buffer.md
scripts/: launch_visual.py  neuralforge_cli.py  setup_complete_system.sh  setup_git_repo.sh  setup_github.sh  setup_projects_integration.py
src/ai/: document_tagger.py  memory_buffer.py
src/automation/: __init__.py  email_automation.py  schedule_automation.py
src/core/: coreml.py  folder_organizer.py  neural_check.py
src/integration/: projects_integration.py  system_integration.py
src/neuralforge/: __init__.py  launcher.py
src/nlp/: natural_language_interface.py
src/tui/: neuralforge_tui.py
src/visual/: gui_dashboard.py  terminal_dashboard.py
src/web/: gui_scraper.py
tests/: test_memory_buffer.py  test_neural_check.py
web-dashboard/: next.config.js  tailwind.config.js
web-dashboard/src/pages/: index.tsx
web-dashboard/src/styles/: globals.css
